# tf

./: ResNet.ipynb  algo.ipynb  cifar10.ipynb  keras.ipynb  main.ipynb  mnist.ipynb  model.ipynb  pyproject.toml
