[tool.poetry]
name = "learn-tensorflow"
version = "0.1.0"
description = "Learn work with Tensorflow 2.x"
authors = ["Mykola <nchernov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.1.4"
ipykernel = "^6.28.0"
pydot = "^2.0.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.9"
ipython = "^8.19.0"
mypy = "^1.8.0"
exceptiongroup = "^1.2.0"
matplotlib = "^3.8.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
